Asgn5/y.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INT_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | LEFT_PARENTHESES expression RIGHT_PARENTHESES

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    9                   | postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARENTHESES
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression ARROW IDENTIFIER
   12                   | postfix_expression INCREMENT
   13                   | postfix_expression DECREMENT
   14                   | LEFT_PARENTHESES typename RIGHT_PARENTHESES LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
   15                   | LEFT_PARENTHESES typename RIGHT_PARENTHESES LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

   16 argument_expression_list_opt: argument_expression_list
   17                             | ε

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF LEFT_PARENTHESES typename RIGHT_PARENTHESES

   26 unary_operator: BITWISE_AND
   27               | ASTERISK
   28               | PLUS
   29               | MINUS
   30               | TILDE
   31               | EXCLAMATORY_MARK

   32 cast_expression: unary_expression
   33                | LEFT_PARENTHESES typename RIGHT_PARENTHESES cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression ASTERISK cast_expression
   36                          | multiplicative_expression FORWARD_SLASH cast_expression
   37                          | multiplicative_expression MODULO cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_EQUAL shift_expression
   48                      | relational_expression GREATER_EQUAL shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression ISEQUAL relational_expression
   51                    | equality_expression NOTEQUAL relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BITWISE_AND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression BITWISE_XOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   58 M: ε

   59 N: ε

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: EQUAL_TO
   69                    | MUL_ASSIGN
   70                    | DIV_ASSIGN
   71                    | MOD_ASSIGN
   72                    | ADD_ASSIGN
   73                    | SUB_ASSIGN
   74                    | LEFT_SHIFT_ASSIGN
   75                    | RIGHT_SHIFT_ASSIGN
   76                    | AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | OR_ASSIGN

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   83 init_declarator_list_opt: init_declarator_list
   84                         | ε

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | ε

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator EQUAL_TO initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | ε

  116 enum_specifier: ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | ENUM IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | ε

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER EQUAL_TO constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 change_scope: ε

  132 direct_declarator: IDENTIFIER
  133                  | LEFT_PARENTHESES declarator RIGHT_PARENTHESES
  134                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  135                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
  136                  | direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
  137                  | direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  138                  | direct_declarator LEFT_SQUARE_BRACKET STATIC type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  139                  | direct_declarator LEFT_SQUARE_BRACKET STATIC assignment_expression RIGHT_SQUARE_BRACKET
  140                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACKET
  141                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
  142                  | direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
  143                  | direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
  144                  | direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
  145                  | direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

  146 type_qualifier_list_opt: type_qualifier_list
  147                        | ε

  148 pointer: ASTERISK type_qualifier_list_opt
  149        | ASTERISK type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list COMMA IDENTIFIER

  160 typename: specifier_qualifier_list

  161 initializer: assignment_expression
  162            | LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
  163            | LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

  164 initializer_list: designation_opt initializer
  165                 | initializer_list COMMA designation_opt initializer

  166 designation_opt: designation
  167                | ε

  168 designation: designator_list EQUAL_TO

  169 designator_list: designator
  170                | designator_list designator

  171 designator: LEFT_SQUARE_BRACKET constant_expression RIGHT_SQUARE_BRACKET
  172           | DOT IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER COLON statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 change_block: ε

  183 compound_statement: LEFT_CURLY_BRACE change_block change_scope block_item_list_opt RIGHT_CURLY_BRACE

  184 block_item_list_opt: block_item_list
  185                    | ε

  186 block_item_list: block_item
  187                | block_item_list M block_item

  188 block_item: declaration
  189           | statement

  190 expression_statement: expression_opt SEMICOLON

  191 expression_opt: expression
  192               | ε

  193 selection_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N
  194                    | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N ELSE M statement
  195                    | SWITCH LEFT_PARENTHESES expression RIGHT_PARENTHESES statement

  196 iteration_statement: WHILE M LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement
  197                    | DO M statement M WHILE LEFT_PARENTHESES expression RIGHT_PARENTHESES SEMICOLON
  198                    | FOR LEFT_PARENTHESES expression_opt SEMICOLON M expression_opt SEMICOLON M expression_opt N RIGHT_PARENTHESES M statement
  199                    | FOR LEFT_PARENTHESES declaration expression_opt SEMICOLON expression_opt RIGHT_PARENTHESES statement

  200 jump_statement: GOTO IDENTIFIER SEMICOLON
  201               | CONTINUE SEMICOLON
  202               | BREAK SEMICOLON
  203               | RETURN expression_opt SEMICOLON

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

  209 declaration_list_opt: declaration_list
  210                     | ε

  211 declaration_list: declaration
  212                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <idval> (258) 1 10 11 118 119 123 124 132 158 159 172 179 200
    INT_CONSTANT <intval> (259) 2
    FLOAT_CONSTANT <floatval> (260) 3
    CHAR_CONSTANT <charval> (261) 4
    STRING_LITERAL <strval> (262) 5
    ARROW (263) 11
    INCREMENT (264) 12 21
    DECREMENT (265) 13 22
    SIZEOF (266) 24 25
    LEFT_SHIFT (267) 42
    RIGHT_SHIFT (268) 43
    LESS_EQUAL (269) 47
    GREATER_EQUAL (270) 48
    ISEQUAL (271) 50
    NOTEQUAL (272) 51
    LOGICAL_AND (273) 61
    LOGICAL_OR (274) 63
    MUL_ASSIGN (275) 69
    DIV_ASSIGN (276) 70
    MOD_ASSIGN (277) 71
    ADD_ASSIGN (278) 72
    SUB_ASSIGN (279) 73
    LEFT_SHIFT_ASSIGN (280) 74
    RIGHT_SHIFT_ASSIGN (281) 75
    AND_ASSIGN (282) 76
    XOR_ASSIGN (283) 77
    OR_ASSIGN (284) 78
    EXTERN (285) 95
    STATIC (286) 96 138 139 140
    AUTO (287) 97
    REGISTER (288) 98
    VOID (289) 99
    CHAR (290) 100
    SHORT (291) 101
    INT (292) 102
    LONG (293) 103
    FLOAT (294) 104
    DOUBLE (295) 105
    SIGNED (296) 106
    UNSIGNED (297) 107
    BOOL (298) 108
    COMPLEX (299) 109
    IMAGINARY (300) 110
    CONST (301) 125
    RESTRICT (302) 126
    VOLATILE (303) 127
    INLINE (304) 128
    ELLIPSIS (305) 153
    ENUM (306) 116 117 118
    CASE (307) 180
    DEFAULT (308) 181
    IF (309) 193 194
    ELSE (310) 194
    SWITCH (311) 195
    FOR (312) 198 199
    DO (313) 197
    WHILE (314) 196 197
    GOTO (315) 200
    CONTINUE (316) 201
    BREAK (317) 202
    RETURN (318) 203
    LEFT_PARENTHESES (319) 6 9 14 15 25 33 133 143 144 145 193 194 195 196 197 198 199
    RIGHT_PARENTHESES (320) 6 9 14 15 25 33 133 143 144 145 193 194 195 196 197 198 199
    DOT (321) 10 172
    COMMA (322) 15 19 80 92 117 122 153 155 159 163 165
    LEFT_SQUARE_BRACKET (323) 8 134 135 136 137 138 139 140 141 142 171
    RIGHT_SQUARE_BRACKET (324) 8 134 135 136 137 138 139 140 141 142 171
    LEFT_CURLY_BRACE (325) 14 15 116 117 162 163 183 208
    RIGHT_CURLY_BRACE (326) 14 15 116 117 162 163 183 208
    LESS_THAN (327) 45
    GREATER_THAN (328) 46
    EQUAL_TO (329) 68 94 124 168
    BITWISE_AND (330) 26 53
    BITWISE_OR (331) 57
    BITWISE_XOR (332) 55
    ASTERISK (333) 27 35 141 142 148 149
    FORWARD_SLASH (334) 36
    PLUS (335) 28 39
    MINUS (336) 29 40
    MODULO (337) 37
    TILDE (338) 30
    EXCLAMATORY_MARK (339) 31
    QUESTION_MARK (340) 65
    COLON (341) 65 179 180 181
    SEMICOLON (342) 82 190 197 198 199 200 201 202 203
    THEN (343)


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    primary_expression <__expression> (90)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression <__array> (91)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument_expression_list_opt <__parameterCount> (92)
        on left: 16 17
        on right: 9
    argument_expression_list <__parameterCount> (93)
        on left: 18 19
        on right: 16 19
    unary_expression <__array> (94)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 67
    unary_operator <__unaryOperator> (95)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression <__array> (96)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression <__expression> (97)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <__expression> (98)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <__expression> (99)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression <__expression> (100)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression <__expression> (101)
        on left: 49 50 51
        on right: 50 51 52 53
    AND_expression <__expression> (102)
        on left: 52 53
        on right: 53 54 55
    exclusive_OR_expression <__expression> (103)
        on left: 54 55
        on right: 55 56 57
    inclusive_OR_expression <__expression> (104)
        on left: 56 57
        on right: 57 60 61
    M <__instructionNumber> (105)
        on left: 58
        on right: 61 63 65 187 193 194 196 197 198
    N <__statement> (106)
        on left: 59
        on right: 65 193 194 198
    logical_AND_expression <__expression> (107)
        on left: 60 61
        on right: 61 62 63
    logical_OR_expression <__expression> (108)
        on left: 62 63
        on right: 63 64 65
    conditional_expression <__expression> (109)
        on left: 64 65
        on right: 65 66 81
    assignment_expression <__expression> (110)
        on left: 66 67
        on right: 18 19 67 79 80 134 136 138 139 140 161
    assignment_operator (111)
        on left: 68 69 70 71 72 73 74 75 76 77 78
        on right: 67
    expression <__expression> (112)
        on left: 79 80
        on right: 6 8 65 80 191 193 194 195 196 197
    constant_expression (113)
        on left: 81
        on right: 124 171 180
    declaration (114)
        on left: 82
        on right: 188 199 207 211 212
    init_declarator_list_opt (115)
        on left: 83 84
        on right: 82
    declaration_specifiers (116)
        on left: 85 86 87 88
        on right: 82 89 156 157 208
    declaration_specifiers_opt (117)
        on left: 89 90
        on right: 85 86 87 88
    init_declarator_list (118)
        on left: 91 92
        on right: 83 92
    init_declarator <__symbol> (119)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (120)
        on left: 95 96 97 98
        on right: 85
    type_specifier (121)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 86 112
    specifier_qualifier_list (122)
        on left: 112 113
        on right: 114 160
    specifier_qualifier_list_opt (123)
        on left: 114 115
        on right: 112 113
    enum_specifier (124)
        on left: 116 117 118
        on right: 111
    identifier_opt (125)
        on left: 119 120
        on right: 116 117
    enumerator_list (126)
        on left: 121 122
        on right: 116 117 122
    enumerator (127)
        on left: 123 124
        on right: 121 122
    type_qualifier (128)
        on left: 125 126 127
        on right: 87 113 150 151
    function_specifier (129)
        on left: 128
        on right: 88
    declarator <__symbol> (130)
        on left: 129 130
        on right: 93 94 133 156 208
    change_scope (131)
        on left: 131
        on right: 143 145 183 208
    direct_declarator <__symbol> (132)
        on left: 132 133 134 135 136 137 138 139 140 141 142 143 144 145
        on right: 129 130 134 135 136 137 138 139 140 141 142 143 144 145
    type_qualifier_list_opt (133)
        on left: 146 147
        on right: 148 149
    pointer <__symbolType> (134)
        on left: 148 149
        on right: 129 149
    type_qualifier_list (135)
        on left: 150 151
        on right: 134 135 138 140 141 146 151
    parameter_type_list (136)
        on left: 152 153
        on right: 143
    parameter_list (137)
        on left: 154 155
        on right: 152 153 155
    parameter_declaration (138)
        on left: 156 157
        on right: 154 155
    identifier_list (139)
        on left: 158 159
        on right: 144 159
    typename (140)
        on left: 160
        on right: 14 15 25 33
    initializer <__symbol> (141)
        on left: 161 162 163
        on right: 94 164 165
    initializer_list (142)
        on left: 164 165
        on right: 14 15 162 163 165
    designation_opt (143)
        on left: 166 167
        on right: 164 165
    designation (144)
        on left: 168
        on right: 166
    designator_list (145)
        on left: 169 170
        on right: 168 170
    designator (146)
        on left: 171 172
        on right: 169 170
    statement <__statement> (147)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 189 193 194 195 196 197 198 199
    labeled_statement <__statement> (148)
        on left: 179 180 181
        on right: 173
    change_block (149)
        on left: 182
        on right: 183
    compound_statement <__statement> (150)
        on left: 183
        on right: 174
    block_item_list_opt <__statement> (151)
        on left: 184 185
        on right: 183 208
    block_item_list <__statement> (152)
        on left: 186 187
        on right: 184 187
    block_item <__statement> (153)
        on left: 188 189
        on right: 186 187
    expression_statement <__expression> (154)
        on left: 190
        on right: 175
    expression_opt <__expression> (155)
        on left: 191 192
        on right: 190 198 199 203
    selection_statement <__statement> (156)
        on left: 193 194 195
        on right: 176
    iteration_statement <__statement> (157)
        on left: 196 197 198 199
        on right: 177
    jump_statement <__statement> (158)
        on left: 200 201 202 203
        on right: 178
    translation_unit (159)
        on left: 204 205
        on right: 0 205
    external_declaration (160)
        on left: 206 207
        on right: 204 205
    function_definition (161)
        on left: 208
        on right: 206
    declaration_list_opt (162)
        on left: 209 210
        on right: 208
    declaration_list (163)
        on left: 211 212
        on right: 209 212


State 0

    0 $accept: • translation_unit $end
   82 declaration: • declaration_specifiers init_declarator_list_opt SEMICOLON
   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOID
  100               | • CHAR
  101               | • SHORT
  102               | • INT
  103               | • LONG
  104               | • FLOAT
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • BOOL
  109               | • COMPLEX
  110               | • IMAGINARY
  111               | • enum_specifier
  116 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | • ENUM IDENTIFIER
  125 type_qualifier: • CONST
  126               | • RESTRICT
  127               | • VOLATILE
  128 function_specifier: • INLINE
  204 translation_unit: • external_declaration
  205                 | • translation_unit external_declaration
  206 external_declaration: • function_definition
  207                     | • declaration
  208 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 2

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 3

   97 storage_class_specifier: AUTO •

    $default  reduce using rule 97 (storage_class_specifier)


State 4

   98 storage_class_specifier: REGISTER •

    $default  reduce using rule 98 (storage_class_specifier)


State 5

   99 type_specifier: VOID •

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: CHAR •

    $default  reduce using rule 100 (type_specifier)


State 7

  101 type_specifier: SHORT •

    $default  reduce using rule 101 (type_specifier)


State 8

  102 type_specifier: INT •

    $default  reduce using rule 102 (type_specifier)


State 9

  103 type_specifier: LONG •

    $default  reduce using rule 103 (type_specifier)


State 10

  104 type_specifier: FLOAT •

    $default  reduce using rule 104 (type_specifier)


State 11

  105 type_specifier: DOUBLE •

    $default  reduce using rule 105 (type_specifier)


State 12

  106 type_specifier: SIGNED •

    $default  reduce using rule 106 (type_specifier)


State 13

  107 type_specifier: UNSIGNED •

    $default  reduce using rule 107 (type_specifier)


State 14

  108 type_specifier: BOOL •

    $default  reduce using rule 108 (type_specifier)


State 15

  109 type_specifier: COMPLEX •

    $default  reduce using rule 109 (type_specifier)


State 16

  110 type_specifier: IMAGINARY •

    $default  reduce using rule 110 (type_specifier)


State 17

  125 type_qualifier: CONST •

    $default  reduce using rule 125 (type_qualifier)


State 18

  126 type_qualifier: RESTRICT •

    $default  reduce using rule 126 (type_qualifier)


State 19

  127 type_qualifier: VOLATILE •

    $default  reduce using rule 127 (type_qualifier)


State 20

  128 function_specifier: INLINE •

    $default  reduce using rule 128 (function_specifier)


State 21

  116 enum_specifier: ENUM • identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | ENUM • identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | ENUM • IDENTIFIER
  119 identifier_opt: • IDENTIFIER
  120               | ε •  [LEFT_CURLY_BRACE]

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


State 22

  207 external_declaration: declaration •

    $default  reduce using rule 207 (external_declaration)


State 23

   82 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
   83 init_declarator_list_opt: • init_declarator_list
   84                         | ε •  [SEMICOLON]
   91 init_declarator_list: • init_declarator
   92                     | • init_declarator_list COMMA init_declarator
   93 init_declarator: • declarator
   94                | • declarator EQUAL_TO initializer
  129 declarator: • pointer direct_declarator
  130           | • direct_declarator
  132 direct_declarator: • IDENTIFIER
  133                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
  134                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  135                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
  136                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
  137                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  138                  | • direct_declarator LEFT_SQUARE_BRACKET STATIC type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  139                  | • direct_declarator LEFT_SQUARE_BRACKET STATIC assignment_expression RIGHT_SQUARE_BRACKET
  140                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACKET
  141                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
  142                  | • direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
  143                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
  144                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
  145                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
  148 pointer: • ASTERISK type_qualifier_list_opt
  149        | • ASTERISK type_qualifier_list_opt pointer
  208 function_definition: declaration_specifiers • declarator declaration_list_opt change_scope LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

    IDENTIFIER        shift, and go to state 34
    LEFT_PARENTHESES  shift, and go to state 35
    ASTERISK          shift, and go to state 36

    $default  reduce using rule 84 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


State 24

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   85                       | storage_class_specifier • declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: • declaration_specifiers
   90                           | ε •  [IDENTIFIER, LEFT_PARENTHESES, RIGHT_PARENTHESES, COMMA, ASTERISK, SEMICOLON]
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOID
  100               | • CHAR
  101               | • SHORT
  102               | • INT
  103               | • LONG
  104               | • FLOAT
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • BOOL
  109               | • COMPLEX
  110               | • IMAGINARY
  111               | • enum_specifier
  116 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | • ENUM IDENTIFIER
  125 type_qualifier: • CONST
  126               | • RESTRICT
  127               | • VOLATILE
  128 function_specifier: • INLINE

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   86                       | type_specifier • declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: • declaration_specifiers
   90                           | ε •  [IDENTIFIER, LEFT_PARENTHESES, RIGHT_PARENTHESES, COMMA, ASTERISK, SEMICOLON]
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOID
  100               | • CHAR
  101               | • SHORT
  102               | • INT
  103               | • LONG
  104               | • FLOAT
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • BOOL
  109               | • COMPLEX
  110               | • IMAGINARY
  111               | • enum_specifier
  116 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | • ENUM IDENTIFIER
  125 type_qualifier: • CONST
  126               | • RESTRICT
  127               | • VOLATILE
  128 function_specifier: • INLINE

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  111 type_specifier: enum_specifier •

    $default  reduce using rule 111 (type_specifier)


State 27
